# pymatrix-max

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml
docs/: architecture.md  commands.md  configuration.md  ghost-cleanup.md  installation-docker.md  installation-systemd.md  publishing.md  troubleshooting.md
docs/releases/: v0.12.0.md
mautrix_max/: __main__.py  commands.py  config.py  example-config.yaml  matrix.py  max_auth_providers.py  max_client.py  portal.py  puppet.py  user.py
mautrix_max/db/: __init__.py  blocked_chat.py  message.py  portal.py  portal_user.py  puppet.py  reaction.py  upgrade.py  user.py
tools/: check_release.py  max_ghost_cleanup.py
