[project]
name = "pymatrix-max"
version = "0.12.0"
description = "Неофициальный многопользовательский мост Matrix ↔ MAX на базе mautrix-python и PyMax."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "NijazKa" }]
keywords = ["matrix", "max", "bridge", "mautrix", "messenger"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "mautrix>=0.21.1,<0.22",
    "aiohttp>=3.13.5,<4",
    "aiofiles>=25.1.0",
    "msgpack>=1.1.2",
    "tomli>=2.0.1; python_version < '3.11'",
    "pydantic>=2.10.0,<3",
    "python-socks[asyncio]>=2.8.1",
    "qrcode>=8.2",
    "websockets>=16.0",
    "zstandard>=0.25.0",
    "yarl>=1,<2",
    "attrs>=18.1.0",
    "ruamel.yaml>=0.15.94,<0.19",
    "commonmark>=0.9,<1",
    "python-magic>=0.4,<0.5",
    "unpaddedbase64>=1,<3",
    "asyncpg>=0.20,<1",
    "aiosqlite>=0.22.1,<1",
]

[project.scripts]
pymatrix-max = "mautrix_max.__main__:main"

[project.urls]
Homepage = "https://github.com/NijazKa/pymatrix-max"
Repository = "https://github.com/NijazKa/pymatrix-max"
Issues = "https://github.com/NijazKa/pymatrix-max/issues"
Changelog = "https://github.com/NijazKa/pymatrix-max/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "vendor/pymax/src"]
include = ["mautrix_max*", "pymax*"]

[tool.setuptools.package-data]
mautrix_max = ["example-config.yaml", "licenses/*"]
pymax = ["py.typed"]
